# ratis

./: .dockerignore  .editorconfig  .env.example  .env.prod.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Caddyfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  codecov.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
batch/_shared/: pyproject.toml
batch/_shared/batch_shared/: __init__.py  retailer_resolution.py  store_consolidation.py
batch/_shared/tests/: conftest.py  test_retailer_resolution.py  test_store_consolidation.py
batch/ratis_batch_consensus/: ARCH_BATCH_CONSENSUS.md  consensus.py  pyproject.toml  store_validation_phase.py
batch/ratis_batch_consensus/tests/: conftest.py  test_consensus.py  test_sentry_init.py  test_store_validation_phase.py
batch/ratis_batch_off_sync/: ARCH_BATCH_OFF_SYNC.md  pyproject.toml
batch/ratis_batch_off_sync/off_sync/: api.py  dump.py  extractor.py  main.py  repository.py  sources.py  stats.py
batch/ratis_batch_off_sync/tests/: conftest.py  test_api.py  test_dump.py  test_extractor.py  test_main.py  test_repository.py  test_sentry_init.py  test_sources.py
batch/ratis_batch_origins_backfill/: ARCH_BATCH_ORIGINS_BACKFILL.md  pyproject.toml
batch/ratis_batch_origins_backfill/origins_backfill/: __init__.py  main.py  runner.py
batch/ratis_batch_origins_backfill/tests/: conftest.py  test_runner.py  test_sentry_init.py
batch/ratis_batch_osm_sync/: ARCH_BATCH_OSM_SYNC.md  README.md  normalize.py  osm_bulk_import.py  osm_sync.py  pyproject.toml
batch/ratis_batch_osm_sync/tests/: conftest.py  test_addr_strict_fix.py  test_osm_bulk_import.py  test_osm_sync.py  test_retailer_resolution.py  test_sentry_init.py  test_upsert_store_multi_constraint.py
batch/ratis_batch_purge/: ARCH_BATCH_PURGE.md  purge.py  pyproject.toml
batch/ratis_batch_purge/tests/: conftest.py  test_purge.py  test_sentry_init.py
batch/ratis_batch_sirene_sync/: ARCH_BATCH_SIRENE_SYNC.md  pyproject.toml  sirene_sync.py
batch/ratis_batch_sirene_sync/sirene_sync/: __init__.py  download.py  geocode.py  normalize.py  parser.py  upsert.py
batch/ratis_batch_sirene_sync/tests/: conftest.py  test_download.py  test_entrypoint.py  test_geocode.py  test_normalize.py  test_parser.py  test_sirene_sync_integration.py
batch/ratis_batch_vrac_seed/: ARCH_BATCH_VRAC_SEED.md  pyproject.toml  seed_data.py  vrac_seed.py
batch/ratis_batch_vrac_seed/tests/: conftest.py  test_seed_data.py  test_sentry_init.py  test_vrac_seed.py
ratis_core/: ARCH_CORE.md  pyproject.toml
ratis_core/ratis_core/: __init__.py  anonymize.py  auth.py  consensus.py  database.py  db_pipeline_checksum.py  db_procedure_args.py  db_procedure_manifest.py  db_procedure_verifier.py  db_procedures.py  deps.py  exceptions.py  geo.py  health.py  human_anomaly_flags.py  human_challenge.py  human_summary.py  identifiers.py  jwt.py  knowledge.py  middleware.py  normalize.py  notifier_client.py  observability.py  ott.py  payout_client.py  products.py  rewards_client.py  savings.py  schemas.py  seed_achievements.py  seed_settings.py  settings.py  startup.py  suggestions_config.py  test_db.py  testing.py  totp_service.py  uploads.py
ratis_core/ratis_core/config/: curated_suggestions_fr.json  ratis_settings.json  retailers_fr.json
ratis_core/ratis_core/data/: product_knowledge.json
ratis_core/ratis_core/models/: __init__.py  achievement.py  admin_audit.py  analytics.py  batch_sync_log.py  city.py  db_change_log.py  db_write_approval.py  fraud_suspicions.py  gamification.py  mystery.py  name_resolution.py  notifications.py  pipeline.py  price.py  product.py  product_contributions.py  referral.py  retailer.py  retailer_receipt_format.py  rewards.py  scan.py  scan_debug.py  settings.py  shopping.py  sirene_geocode_cache.py  store.py  store_candidate.py  store_fingerprint.py  user.py
ratis_core/ratis_core/seed/: boutique_brands.py  bp_season_1.py  missions_v1.py  retailers.py
ratis_core/tests/: _alembic_fixture.py  conftest.py  test_agent_role_permissions.py  test_anonymize.py  test_cashback_transactions_constraints.py  test_database.py  test_db_change_log_record.py  test_db_change_log_schema.py  test_db_pipeline_caps.py  test_db_pipeline_checksum.py  test_db_procedure_args.py  test_db_procedure_manifest.py  test_db_procedure_verifier.py  test_db_procedures.py  test_ean_checksum.py  test_geo.py  test_health.py  test_hsp3_migration.py  test_hsp4_migration.py  test_human_anomaly_flags.py  test_human_challenge.py  test_human_summary.py  test_identifiers.py  test_jwt.py  test_jwt_refresh.py  test_middleware.py  test_models_admin_audit.py  test_models_fraud_suspicions.py  test_models_name_resolution.py  test_models_retailer.py  test_models_sirene_geocode_cache.py  test_models_store_resolution.py  test_normalize.py  test_notifier_client_send.py  test_ott.py  test_product_contributions_constraints.py  test_products.py  test_products_first_discovery.py  test_scans_constraints.py  test_schema_sync.py  (+10 more)
tools/agent-mcp/: README.md  pyproject.toml
webservices/ratis_auth/: .env.example  ARCH_AUTH.md  Dockerfile  main.py  pyproject.toml
webservices/ratis_list_optimiser/: .env.example  ARCH_LIST_OPTIMISER.md  Dockerfile  main.py  pyproject.toml
webservices/ratis_migrations/: Dockerfile  pyproject.toml
webservices/ratis_notifier/: .env.example  ARCH_NOTIFIER.md  Dockerfile  main.py  pyproject.toml
webservices/ratis_product_analyser/: .env.example  ARCH_OCR_LLM_BRIDGE.md  ARCH_PRODUCT_ANALYSER.md  ARCH_barcode.md  ARCH_consensus.md  ARCH_cross_retailer_consensus.md  ARCH_name_resolution_consensus.md  ARCH_receipt_pipeline.md  ARCH_store_resolution.md  ARCH_store_validation.md  Dockerfile  celery_app.py  main.py  pyproject.toml  storage.py  tasks.py
webservices/ratis_rewards/: .env.example  ARCH_REWARDS.md  ARCH_battlepass.md  ARCH_boutique.md  ARCH_cab.md  ARCH_cashback.md  ARCH_gamification.md  ARCH_gift_cards.md  ARCH_missions.md  ARCH_mystery_product.md  Dockerfile  db_utils.py  deps.py  limiter.py  main.py  pyproject.toml
(+1495 files in other folders)
