[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ratis-batch-shared"
version = "0.1.0"
description = "Shared pure-function helpers for ratis_batch_* workers (store consolidation, etc.)."
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.0",
    "ratis-core",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.9",
]

[tool.uv.sources]
ratis-core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["batch_shared"]

# Import path : ``from batch_shared.store_consolidation import ...``
# (NOT ``from batch._shared.X`` — the leading-underscore namespace would be
# fragile : Python allows underscores in module names but tooling like ruff
# / mypy / pytest treat ``_shared`` as private, and hatchling cannot wheel a
# package whose directory name starts with an underscore without explicit
# include rules. We keep ``batch/_shared/`` on disk as a sibling to other
# ``batch/ratis_batch_*`` workspace members purely for filesystem grouping ;
# the wheel package name ``batch_shared`` is the only contract callers see.)

[tool.pytest.ini_options]
timeout = 60
timeout_method = "thread"
