[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ratis-batch-off-sync"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "psycopg[binary]>=3.0",
    "ratis-core",
    "sentry-sdk>=2.58.0",
    "sqlalchemy>=2.0",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "python-dotenv>=1.0",
]

[tool.uv.sources]
ratis-core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["off_sync"]
