[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ratis-batch-sirene-sync"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pyarrow>=15.0",
    "psycopg[binary]>=3.0",
    "ratis-core",
    "ratis-batch-shared",
    "sqlalchemy>=2.0",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.4.0",
    "python-dotenv>=1.0",
    "ruff>=0.15.9",
]

[tool.uv.sources]
ratis-core = { workspace = true }
ratis-batch-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["sirene_sync"]

[tool.pytest.ini_options]
timeout = 60
timeout_method = "thread"
