[project]
name = "ratis-batch-vrac-seed"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.0",
    "ratis-core",
    "sentry-sdk>=2.58.0",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.4",
    "python-dotenv>=1.0",
    "ruff>=0.15.9",
]

[tool.uv.sources]
ratis-core = { workspace = true }

[tool.pytest.ini_options]
timeout = 60
timeout_method = "thread"
