[project]
name = "ratis-agent-mcp"
version = "0.1.0"
description = "MCP server exposing typed tools to Claude Code agents (Sentry, EAS, GitHub, ...) without leaking provider tokens"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mcp>=1.0",        # Anthropic MCP SDK official
    "pydantic>=2.7",
    "httpx>=0.27",     # prepared for chunks 2+ (Sentry/etc.)
    "boto3>=1.38",     # chunk 7 — R2 (Cloudflare S3-compatible) wrapper
    "numpy>=1.26",     # module 9 phase D — cosine similarity over embeddings
    "sqlite-vec>=0.1.6",  # module 9 phase D — vector backend for docs_search
]

[project.optional-dependencies]
# Heavy embedder model is optional — only needed to build/refresh the vector
# index, NOT to query a pre-built one. Keeps base install light for users
# who only consume the hybrid backend (e.g. CI mocks the embedder).
vector = [
    "sentence-transformers>=2.7",
]

[project.scripts]
agent-mcp = "agent_mcp.cli:main"
ratis-secret = "agent_mcp.secrets.cli_secrets:main"  # pragma: allowlist secret
ratis-admin = "agent_mcp.secrets.cli_admin:main"  # pragma: allowlist secret

[tool.pytest.ini_options]
timeout = 60
timeout_method = "thread"   # cf R15 — POSIX/Windows-safe (no SIGALRM)
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2",
    "moto[s3]>=5.0",   # chunk 7 — boto3 stub for R2 (S3-compat) tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_mcp"]
