[project]
name = "ratis-auth"
version = "0.1.0"
description = "OAuth + email/password authentication service for Ratis"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "google-auth>=2.49.1",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.3",
    "pydantic[email]>=2.12.5",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "ratis-core",
    "redis>=6.4.0",
    "sentry-sdk[fastapi]>=2.58.0",
    "slowapi>=0.1.9",
    "stripe>=15.0.1",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# See ratis_product_analyser/pyproject.toml for rationale (Windows pytest hang fix).
timeout = 60
timeout_method = "thread"
pythonpath = ["tests"]

[tool.uv.sources]
ratis-core = { workspace = true }
