[project]
name = "ratis-list-optimiser"
version = "0.1.0"
description = "Shopping list optimization and multi-store route planning for Ratis"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.0",
    "python-dotenv>=1.0",
    "python-jose[cryptography]>=3.3.0",
    "ratis-core",
    "sentry-sdk[fastapi]>=2.58.0",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4",
    "respx>=0.22.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# See ratis_product_analyser/pyproject.toml for rationale (Windows pytest hang fix).
timeout = 60
timeout_method = "thread"

[tool.uv.sources]
ratis-core = { workspace = true }
