[project]
name = "ratis-notifier"
version = "0.1.0"
description = "Push notification service for Ratis"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.0",
    "python-dotenv>=1.0",
    "ratis-core",
    "redis>=5.0",
    "sentry-sdk[fastapi]>=2.58.0",
    "tenacity>=9.0",
    "tzdata>=2025.3",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
]

[tool.uv.sources]
ratis-core = { workspace = true }
