[project]
name = "ratis-rewards"
version = "0.1.0"
description = "Rewards service for Ratis (CAB, battlepass, missions)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.0",
    "pyotp>=2.9",
    "python-dotenv>=1.0",
    "ratis-core",
    "redis>=6.4.0",
    "sentry-sdk[fastapi]>=2.58.0",
    "slowapi>=0.1.9",
    "tzdata>=2025.3",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
]

[tool.uv.sources]
ratis-core = { workspace = true }
